# LG_Online_Sales_Hackathon

./: README.md  pyproject.toml
notebooks/: 01_data_overview.ipynb  02_forecasting_pipeline.ipynb
src/lg_online_sales_forecasting/: __init__.py  cli.py  config.py  data.py  features.py  metrics.py  modeling.py  pipeline.py
