[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lg-online-sales-forecasting"
version = "0.1.0"
description = "Sales forecasting pipeline for the LG online sales hackathon"
requires-python = ">=3.9"
dependencies = [
    "lightgbm",
    "numpy",
    "pandas",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]
